# ollamachat

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODE_QUALITY_IMPROVEMENTS_COMPLETED.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  MAINTENANCE_IMPROVEMENTS_COMPLETED.md  Makefile  PERFORMANCE_IMPROVEMENTS_COMPLETED.md  PHASE1_SECURITY_CLEANUP_COMPLETED.md  README.md  SECURITY_ISSUES_PHASE2_COMPLETED.md  WORK_SUMMARY_2025-08-13.md  app.py  check-dev-env.py  check_communication.py  config.py  database_operations.py  debug_app_issue.py  debug_chat.py  debug_web_app.py  dev.py  docker-compose.yml  enhanced_logging.py  error_handlers.py  forms.py  improvements.md  main.py  migrate_database.py  models.py  ollama_client.py  ollama_pool.py  package-lock.json  pyproject.toml  rate_limiting.py  (+13 more)
.claude/: settings.local.json
.kiro/specs/ollama-chat/: design.md  requirements.md  tasks.md  tests.md
docs/archive/: CODE_QUALITY_IMPROVEMENTS_COMPLETED.md  MAINTENANCE_IMPROVEMENTS_COMPLETED.md  PERFORMANCE_IMPROVEMENTS_COMPLETED.md  PHASE1_SECURITY_CLEANUP_COMPLETED.md  SECURITY_ISSUES_PHASE2_COMPLETED.md  WORK_SUMMARY_2025-08-13.md
migrations/versions/: 7d814cf6fe1d_initial_schema.py
routes/: api.py  auth.py  chat.py  main.py  settings.py
routes/api_versions/: __init__.py
routes/api_versions/v1/: __init__.py  base.py  chat.py  docs.py  models.py  system.py  users.py
security/: url_validator.py
static/: settings.js
static/css/: chat.css  settings.css  style.css
static/js/: chat.js  settings.js
templates/: base.html  chat.html  login.html  register.html  settings.html
tests/: conftest.py  test_auth.py  test_database.py  test_ollama.py  test_ollama_integration.py  test_settings.py  test_url_validator.py
