[project]
name = "ollama-chat"
version = "0.1.0"
description = "Simple chat application for communicating with local OLLAMA models"
requires-python = ">=3.13"
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.0.5",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.1.1",
    "WTForms==3.0.1",
    "Werkzeug==2.3.7",
    "requests==2.31.0",
    "email-validator==2.2.0",
    "marshmallow>=3.19.0",
    "Flask-Limiter>=3.5.0",
    "Flask-Migrate>=4.0.0",
    "python-dotenv>=1.1.1",
    "beautifulsoup4>=4.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=5.0.0",
    "watchdog>=3.0.0",
]

[tool.uv.sources]

[project.optional-dependencies]
production = [
    "gunicorn>=21.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# test_ollama_integration.py is a standalone script that requires a live
# OLLAMA server; skip it from automatic discovery.
addopts = "--ignore=tests/test_ollama_integration.py"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "migrate_database.py",
    "validate_config.py",
    "dev.py",
    "setup-dev.py",
    "check-dev-env.py",
    "logs/*",
    "docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false
